[gd_scene load_steps=19 format=2]

[ext_resource path="res://PLayer.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Beautiful-Nature-Wallpapers-for-Background-HD-Wallpaper.jpg" type="Texture" id=3]
[ext_resource path="res://heli.gd" type="Script" id=4]
[ext_resource path="res://heli/heli-1.png" type="Texture" id=5]
[ext_resource path="res://heli/heli-2.png" type="Texture" id=6]
[ext_resource path="res://heli/heli-3.png" type="Texture" id=7]
[ext_resource path="res://heli/heli-4.png" type="Texture" id=8]
[ext_resource path="res://tile.tres" type="TileSet" id=9]
[ext_resource path="res://Control.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 25.3658 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "fly",
"speed": 100.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 96, 32 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 480, 0 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 256, 0 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 96, 10 )

[node name="Node2D" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 23.2197, -32 )
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 392.78, 89.3658 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 392.78, 89.3658 )
shape = SubResource( 1 )

[node name="player_area" type="Area2D" parent="Player"]
position = Vector2( 392.78, 89.3658 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/player_area"]
shape = SubResource( 2 )

[node name="Wall" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Wall"]
position = Vector2( -128, 320 )

[node name="Sprite" type="Sprite" parent="Wall/StaticBody2D"]
modulate = Color( 0.34902, 0.168627, 0.168627, 1 )
position = Vector2( 416, 224 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D"]
position = Vector2( 416, 224 )
shape = SubResource( 3 )

[node name="StaticBody2D5" type="StaticBody2D" parent="Wall"]
position = Vector2( 224, 224 )

[node name="Sprite" type="Sprite" parent="Wall/StaticBody2D5"]
modulate = Color( 0.34902, 0.168627, 0.168627, 1 )
position = Vector2( 416, 224 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D5"]
position = Vector2( 416, 224 )
shape = SubResource( 3 )

[node name="StaticBody2D6" type="StaticBody2D" parent="Wall"]
position = Vector2( 288, 224 )

[node name="Sprite" type="Sprite" parent="Wall/StaticBody2D6"]
modulate = Color( 0.34902, 0.168627, 0.168627, 1 )
position = Vector2( 416, 224 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D6"]
position = Vector2( 416, 224 )
shape = SubResource( 3 )

[node name="StaticBody2D7" type="StaticBody2D" parent="Wall"]
position = Vector2( 416, 128 )

[node name="Sprite" type="Sprite" parent="Wall/StaticBody2D7"]
modulate = Color( 0.34902, 0.168627, 0.168627, 1 )
position = Vector2( 416, 224 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D7"]
position = Vector2( 416, 224 )
shape = SubResource( 3 )

[node name="StaticBody2D8" type="StaticBody2D" parent="Wall"]
position = Vector2( 480, 128 )

[node name="Sprite" type="Sprite" parent="Wall/StaticBody2D8"]
modulate = Color( 0.34902, 0.168627, 0.168627, 1 )
position = Vector2( 416, 224 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D8"]
position = Vector2( 416, 224 )
shape = SubResource( 3 )

[node name="StaticBody2D9" type="StaticBody2D" parent="Wall"]
position = Vector2( 288, -32 )

[node name="Sprite" type="Sprite" parent="Wall/StaticBody2D9"]
modulate = Color( 0.34902, 0.168627, 0.168627, 1 )
position = Vector2( 416, 224 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D9"]
position = Vector2( 416, 224 )
shape = SubResource( 3 )

[node name="StaticBody2D10" type="StaticBody2D" parent="Wall"]
position = Vector2( 224, -32 )

[node name="Sprite" type="Sprite" parent="Wall/StaticBody2D10"]
modulate = Color( 0.34902, 0.168627, 0.168627, 1 )
position = Vector2( 416, 224 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D10"]
position = Vector2( 416, 224 )
shape = SubResource( 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Wall"]
position = Vector2( 64, 320 )

[node name="Sprite" type="Sprite" parent="Wall/StaticBody2D2"]
modulate = Color( 0.34902, 0.168627, 0.168627, 1 )
position = Vector2( 416, 224 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D2"]
position = Vector2( 416, 224 )
shape = SubResource( 3 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Wall"]
position = Vector2( 0, 320 )

[node name="Sprite" type="Sprite" parent="Wall/StaticBody2D3"]
modulate = Color( 0.34902, 0.168627, 0.168627, 1 )
position = Vector2( 416, 224 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D3"]
position = Vector2( 416, 224 )
shape = SubResource( 3 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Wall"]
position = Vector2( -64, 320 )

[node name="Sprite" type="Sprite" parent="Wall/StaticBody2D4"]
modulate = Color( 0.34902, 0.168627, 0.168627, 1 )
position = Vector2( 416, 224 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall/StaticBody2D4"]
position = Vector2( 416, 224 )
shape = SubResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Beautiful-Nature-Wallpapers-for-Background-HD-Wallpaper" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 640, 416 )
texture = ExtResource( 3 )

[node name="heli" type="Area2D" parent="."]
position = Vector2( 160, 544 )
gravity_point = true
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="heli"]
frames = SubResource( 4 )
animation = "fly"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="heli"]
shape = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 480, -64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 64 )
shape = SubResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
format = 1
tile_data = PoolIntArray( 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )

[node name="Button" type="Button" parent="Control"]
margin_left = 800.0
margin_top = 64.0
margin_right = 928.0
margin_bottom = 128.0
text = "Call"

[node name="Label" type="Label" parent="Control"]
margin_left = 832.0
margin_top = 160.0
margin_right = 872.0
margin_bottom = 174.0

[node name="Helipad" type="Area2D" parent="."]
position = Vector2( 160, 704 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Helipad"]
shape = SubResource( 7 )

[node name="Still_in_air" type="Area2D" parent="."]
position = Vector2( 128, 57.3658 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Still_in_air"]
shape = SubResource( 8 )
[connection signal="area_entered" from="Player/player_area" to="heli" method="_on_player_area_area_entered"]
[connection signal="area_entered" from="heli" to="Player" method="_on_heli_area_entered"]
[connection signal="pressed" from="Control/Button" to="heli" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Button" to="Control" method="_on_Button_pressed"]
[connection signal="area_entered" from="Helipad" to="heli" method="_on_Helipad_area_entered"]
[connection signal="area_entered" from="Still_in_air" to="heli" method="_on_Still_in_air_area_entered"]
